# Book-loan-management

./: .gitignore  CMakeLists.txt  README.md
console edition/: Makefile
console edition/src/: adherents.c  declarations.h  empruntes.c  fichiers.c  livres.c  main.c
src/: books.c  declars.h  loans.c  main.c  members.c
